<resources>
    <string name="app_name">MRCalculator</string>
    <string name="num01">1</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num10">10</string>
    <string name="num30">30</string>
    <string name="num360">6h</string>
    <string name="num60">60</string>
    <string name="num720">12h</string>
    <string name="num1440">1d</string>
    <string name="num2880">2d</string>
    <string name="d3">d3</string>
    <string name="d5">5d</string>
    <string name="d7">7d</string>
    <string name="d15">15d</string>
    <string name="bar2">--</string>
    <string name="resultArea">结果区域</string>
    <string name="result">计算结果</string>
    <string name="para_area">参数设置区</string>
    <string name="str_a">a</string>
    <string name="str_alpha">α</string>
    <string name="str_gama">γ</string>
    <string name="str_beta">β</string>
    <string name="str_n">n</string>
    <string name="str_m">m</string>
    <string name="calculate">计算</string>
    <string name="d30">30d</string>
    <string name="num_100">100</string>
    <string name="num_0">0</string>
    <string name="month_2">2Mon</string>
    <string name="month_3">3Mon</string>
    <string name="month_6">6Mon</string>
    <string name="str_MS">当前MS</string>
    <string name="str_Time">时限上限</string>
    <string name="str_targetRMA">targetRM</string>
    <string name="str_I">I</string>
    <string name="str_II">II</string>
    <string name="str_III">III</string>
    <string name="str_IV">IV</string>
    <string name="str_V">V</string>
    <string name="str_VI">VI</string>
    <string name="str_VII">VII</string>
    <string name="str_VIII">VIII</string>
    <string name="str_IX">IX</string>
    <string name="str_X">X</string>
    <string name="str_XI">XI</string>
    <string name="str_XII">XII</string>
    <string name="str_0" >0</string>
    <string name="time_calculator">时间计算页</string>
    <string name="to_time_calculator">转到时间计算页</string>

</resources>
