<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimeCalculator"
    android:orientation="vertical">
    
    <!--标题行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" 
            android:gravity="center"
            android:text="@string/str_MS"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/str_targetRMA"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/str_Time"
            android:gravity="center"
            />
    </LinearLayout>
    <!--横分割线，行间-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#efefef"
        />

    <!--第0行，MS=0-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_0"
            />
        <TextView
            android:id="@+id/tv_0_2_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tv_0_3_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            />
    </LinearLayout>
    <!--横分割线，行间-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#efefef"
        />
    
    <!--第一行，MS=1-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv_1_1_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_I"
            />
        <TextView
            android:id="@+id/tv_1_2_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tv_1_3_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            />
    </LinearLayout>
    <!--横分割线，行间-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#efefef"
        />

    <!--第2行，MS=2-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv_2_1_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_II"
            />
        <TextView
            android:id="@+id/tv_2_2_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tv_2_3_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            />
    </LinearLayout>
    <!--横分割线，行间-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#efefef"
        />

    <!--第3行，MS=3-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_III"
            />
        <TextView
            android:id="@+id/tv_3_2_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tv_3_3_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            />
    </LinearLayout>
    <!--横分割线，行间-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#efefef"
        />

    <!--第4行，MS=4-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_IV"
            />
        <TextView
            android:id="@+id/tv_4_2_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tv_4_3_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            />
    </LinearLayout>
    <!--横分割线，行间-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#efefef"
        />

    <!--第5行，MS=5-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_V"
            />
        <TextView
            android:id="@+id/tv_5_2_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tv_5_3_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            />
    </LinearLayout>
    <!--横分割线，行间-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#efefef"
        />


    <!--第6行，MS=6-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_VI"
            />
        <TextView
            android:id="@+id/tv_6_2_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tv_6_3_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            />
    </LinearLayout>
    <!--横分割线，行间-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#efefef"
        />


    <!--第7行，MS=7-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_VII"
            />
        <TextView
            android:id="@+id/tv_7_2_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tv_7_3_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            />
    </LinearLayout>
    <!--横分割线，行间-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#efefef"
        />

    <!--第8行，MS=8-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_VIII"
            />
        <TextView
            android:id="@+id/tv_8_2_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tv_8_3_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            />
    </LinearLayout>
    <!--横分割线，行间-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#efefef"
        />


    <!--第9行，MS=9-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_IX"
            />
        <TextView
            android:id="@+id/tv_9_2_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tv_9_3_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            />
    </LinearLayout>
    <!--横分割线，行间-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#efefef"
        />


    <!--第10行，MS=10-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_X"
            />
        <TextView
            android:id="@+id/tv_10_2_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tv_10_3_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            />
    </LinearLayout>
    <!--横分割线，行间-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#efefef"
        />


    <!--第11行，MS=11-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_XI"
            />
        <TextView
            android:id="@+id/tv_11_2_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tv_11_3_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            />
    </LinearLayout>
    <!--横分割线，行间-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#efefef"
        />

    <!--第12行，MS=12-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_XII"
            />
        <TextView
            android:id="@+id/tv_12_2_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tv_12_3_TC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            />
    </LinearLayout>
    <!--横分割线，行间-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#efefef"
        />
    
</LinearLayout>